--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 </header>
 <!--/header-->
 <!--slideshow-->
-	<img class="mySlides w3-animate-fading" src="images/img1.JPG" alt="carlos" style="width: 100%">
-	<img class="mySlides w3-animate-fading" src="images/skate3.JPG" alt="skate park" style="width: 100%">
-	<img class="mySlides w3-animate-fading" src="images/IMG_0958.JPG" alt="carlos" style="width: 100%">
+	<img class="mySlides w3-animate-fading" src="images/img1.jpg" alt="carlos" style="width: 100%">
+	<img class="mySlides w3-animate-fading" src="images/skate3.jpg" alt="skate park" style="width: 100%">
+	<img class="mySlides w3-animate-fading" src="images/IMG_0958.jpg" alt="carlos" style="width: 100%">
 	<img class="mySlides w3-animate-fading" src="images/img2.jpg" alt="alvin" style="width: 100%">
 	<img class="mySlides w3-animate-fading" src="images/temple.jpg" alt="temple bar" style="width: 100%">
 	<img class="mySlides w3-animate-fading" src="images/IMG_5018.jpg" alt="alvin" style="width: 100%">
 	<img class="mySlides w3-animate-fading" src="images/img3.jpg" alt="the twins" style="width: 100%">
 	<img class="mySlides w3-animate-fading" src="images/stephens-green.jpg" alt="stephen's green" style="width: 100%">
-	<img class="mySlides w3-animate-fading" src="images/IMG_0867.JPG" alt="the twins" style="width: 100%">
+	<img class="mySlides w3-animate-fading" src="images/IMG_0867.jpg" alt="the twins" style="width: 100%">
 <!--/slideshow-->
 	
 <!--row-->
