--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 <main id="about">
 		<h1> Meet the team </h1>
 	
-	<img src="images/IMG_3607.JPG" alt="Nhu picture">
+	<img src="images/IMG_3607.jpg" alt="Nhu picture">
 	
 	<p> I’m 18 years old and I am a second year student in ITB studying CDM.  I listen to different types of music, every now and then I go from pop - punk rock - r&amp;b. I listen to random music if I like the song I add it or save it to my phone. Listening to these music genres, makes me dress somewhat like them. My taste in music and style changes every now and then, it usually depends on what I feel like wearing. I don't dress up that much, I just wear something I feel comfortable in. I don't like wearing bright colours or the colour pink, orange and yellow. Pink, Orange and Yellow are the colours I don't like so I don't wear them. I usually wear dark colours, I have a few colours but usually, it's dark. - Nhu </p>
 	
