--- a/carlos.html
+++ b/carlos.html
@@ -54,7 +54,7 @@
 		<b> Nationaliy: </b> Filopino<br><br>
 		Carlos is a Marketing student currently based in Dublin. Carlos has been through quite the style journey through the years and credits that journey to his personal style now. Carlos believes his style is reflection of who he is and how he wants to be portrayed. Carlos takes inspiration from a mix of decades but mostly from the nineties skater scene with touches of new brands and new trends. Carlos describes his style as a mix of casual street style and expressive.
 	</aside>
-	<figure><img src="images/carlos.JPG" alt="carlos" width="500" height="750"></figure>
+	<figure><img src="images/carlos.jpg" alt="carlos" width="500" height="750"></figure>
 	
 	<iframe src="https://player.vimeo.com/video/322290124?byline=0&portrait=0" width="1415" height="796" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	
