--- a/twins.html
+++ b/twins.html
@@ -56,7 +56,7 @@
 		Alina and Adina are currently students in Dublin studying for a business degree. They grew up interested in the same style and fashion so have dressed exactly the same since they were kids. They describe their style as trendy, casual but with added personality with the use of accessories. They use fashion as a way to express themselves, fashion is a key part of their lives it’s a way for them to tell the world who they are and how close of a bond they have together.
 	</aside>
 	
-	<figure><img src="images/twins.JPG" alt="twins" width="500" height="750"></figure>
+	<figure><img src="images/twins.jpg" alt="twins" width="500" height="750"></figure>
 	
 	<iframe src="https://player.vimeo.com/video/322288874?byline=0&portrait=0" width="1415" height="796" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	
