--- a/interview.html
+++ b/interview.html
@@ -56,8 +56,8 @@
 	
 <div class="content">
 	<a href="twins.html">
-		<img class="mySlides w3-animate-fading image" src="images/image1.JPG" alt="twins" style="width: 100%">
-		<img class="mySlides w3-animate-fading image" src="images/image2.JPG" alt="twins" style="width: 100%">
+		<img class="mySlides w3-animate-fading image" src="images/image1.jpg" alt="twins" style="width: 100%">
+		<img class="mySlides w3-animate-fading image" src="images/image2.jpg" alt="twins" style="width: 100%">
 	<div class="middle">
     	<div class="text">Click to know their story</div>
  	</div>
@@ -66,8 +66,8 @@
 	
 <div class="content2">
 	<a href="alvin.html">
-		<img class="mySlides w3-animate-fading image" src="images/image3.JPG" alt="alvin" style="width: 100%">
-		<img class="mySlides w3-animate-fading image" src="images/image4.JPG" alt="alvin" style="width: 100%">
+		<img class="mySlides w3-animate-fading image" src="images/image3.jpg" alt="alvin" style="width: 100%">
+		<img class="mySlides w3-animate-fading image" src="images/image4.jpg" alt="alvin" style="width: 100%">
 	<div class="middle">
     	<div class="text">Click to know their story</div>
  	</div>
@@ -76,8 +76,8 @@
 	
 <div class="content3">
 	<a href="carlos.html">
-		<img class="mySlides w3-animate-fading image" src="images/image5.JPG" alt="carlos" style="width: 100%">
-		<img class="mySlides w3-animate-fading image" src="images/image6.JPG" alt="carlos" style="width: 100%">
+		<img class="mySlides w3-animate-fading image" src="images/image5.jpg" alt="carlos" style="width: 100%">
+		<img class="mySlides w3-animate-fading image" src="images/image6.jpg" alt="carlos" style="width: 100%">
 	<div class="middle">
     	<div class="text">Click to know their story</div>
  	</div>
